// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<NotesList /> when there are no notes renders 1`] = `
<div>
  <p
    class="text-center"
  >
    No notes found
  </p>
</div>
`;

exports[`<NotesList /> when there are notes renders 1`] = `
<div>
  <ul
    class="list-none divide-x-0 divide-y-2 divide-solid divide-zinc-300 p-0 dark:divide-zinc-800"
  >
    <li>
      <div
        class="hover:no-underline"
        href="/notes/filename"
        role="link"
      >
        <div
          class="flex flex-col-reverse gap-2 sm:flex-row"
        >
          <time
            datetime="2021-12-31T22:00:00.000Z"
          >
            01/01/22
          </time>
          <span
            class="text-light-primary hover:no-underline dark:text-dark-primary"
          >
            title
          </span>
        </div>
        <span
          class="opacity-0 group-hover:animate-pulse"
        >
          ⇝
        </span>
      </div>
    </li>
  </ul>
</div>
`;

exports[`<NotesList /> when there are notes when there are lines renders 1`] = `
<div>
  <ul
    class="list-none divide-x-0 divide-y-2 divide-solid divide-zinc-300 p-0 dark:divide-zinc-800"
  >
    <li>
      <div
        class="hover:no-underline"
        href="/notes/filename"
        role="link"
      >
        <div
          class="flex flex-col-reverse gap-2 sm:flex-row"
        >
          <time
            datetime="2021-12-31T22:00:00.000Z"
          >
            01/01/22
          </time>
          <span
            class="text-light-primary hover:no-underline dark:text-dark-primary"
          >
            title
          </span>
        </div>
        <span
          class="opacity-0 group-hover:animate-pulse"
        >
          ⇝
        </span>
      </div>
      <ul
        class="pb-4"
      >
        <li
          class="list-disc text-[0.9em] marker:text-light-primary dark:marker:text-dark-primary"
        >
          line
        </li>
      </ul>
    </li>
  </ul>
</div>
`;
